// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders short account for label when no label property 1`] = `
Array [
  <span
    title="GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
  >
    <Link
      replace={false}
      to="/account/GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
    >
      GCGG
    </Link>
  </span>,
]
`;

exports[`renders with label 1`] = `
Array [
  <span
    title="GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
  >
    <Link
      replace={false}
      to="/account/GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
    >
      Anchor
    </Link>
  </span>,
]
`;
